<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:background="#eeeeee"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="#42a5f5"
            android:text="@string/title"
            android:textColor="#212121"
            android:textSize="23dp" />

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="#42a5f5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stitle"
                android:textColor="#212121"
                android:id="@+id/textView" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data"
                android:textAlignment="textEnd"
                android:textColor="#212121" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/lorem1"
            android:textColor="#212121" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="16dp"
            android:background="#bdbdbd"
            android:text="@string/button1" />

        <TextView
            android:padding="10dp"
            android:background="#42a5f5"
            android:textColor="#212121"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/title"
            android:textSize="23dp" />

        <LinearLayout
            android:background="#42a5f5"
            android:padding="10dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="#212121"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stitle" />

            <TextView
                android:textColor="#212121"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data"
                android:textAlignment="textEnd" />

        </LinearLayout>

        <TextView
            android:textColor="#212121"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/lorem1" />

        <Button
            android:layout_marginBottom="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="16dp"
            android:background="#bdbdbd"
            android:text="@string/button1" />
    </LinearLayout>






</LinearLayout>


    </ScrollView>
